<resources>
    <string name="app_name">CryptoMarket</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pay_for_favorite_purchases">Pay for your favorite purchases online</string>
    <string name="fast_home_delivery">Fast home delivery of the card \nand free service</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_hint_name">Name</string>
    <string name="terms_privacy_policy">Terms &amp; Privacy Policy</string>
    <string name="sign_up_hint_email">Email</string>
    <string name="sign_up_hint_password">Password</string>
    <string name="tabs_main">Main</string>
    <string name="tabs_trade">Trade</string>
    <string name="tabs_pay">Pay</string>
    <string name="tabs_history">History</string>
    <string name="tabs_account">Account</string>
    <string name="welcome_back">welcome back</string>
    <string name="profile_name">bahanotdead</string>
    <string name="subtitle">hello@example.com</string>
    <string name="total_balance">Total balance</string>
    <string name="balance_amount">$19 000.00</string>
    <string name="suggested">Suggested</string>
    <string name="nord_bank">NORD bank</string>
    <string name="nord_bank_description">Fast home delivery of the card and free service</string>
    <string name="latest_transaction">Latest transactions</string>
    <string name="see_all">See all</string>
    <string name="transaction_title">Anna Enfield</string>
    <string name="transaction_detail">Mastercard \u00E2\u0080\u00A2 7682</string>
    <string name="dollar_amount">-$700.00</string>
    <string name="incomes">Incomes</string>
    <string name="income_amount">$5 690.00</string>
    <string name="expenses">Expenses</string>
    <string name="expenses_amount">$2 280.00</string>
    <string name="october">October 2020</string>
    <string name="summary">Summary</string>
    <string name="total_balance_main">total balance</string>
    <string name="stock">Stock</string>
    <string name="exchange">Exchange</string>
    <string name="pay">Pay</string>
    <string name="example_date">Thursday,\n 4 september</string>
    <string name="transactions">Transactions</string>
    <string name="see_all_main"><![CDATA[See all >]]></string>
    <string name="market">MARKET</string>
    <string name="current_price">current price</string>
    <string name="payments">Payments</string>
    <string name="search">Search</string>
    <string name="templates">Templates</string>
    <string name="add">Add</string>
    <string name="wallet">Wallet</string>
    <string name="currency_title">BTC</string>
    <string name="currency_subtitle">0.002</string>
    <string name="watchList">WatchList</string>
    <string name="watchList_title">XRP</string>
    <string name="watchList_subtitle">XRP</string>
    <string name="watchlist_dollar">$0.27</string>
    <string name="watchlist_dollar_percent">-0.51%</string>
    <string name="cancel">Cancel</string>
    <string name="transfer">Transfer</string>
    <string name="enter_phone_number">Enter phone number or name</string>
    <string name="selected_card">Selected card</string>
    <string name="amount">Amount</string>
    <string name="initial_amount">$0.00</string>
    <string name="transfer_to_wallets">Transfer to wallets</string>
    <string name="internet">Internet</string>
    <string name="market_is_up">Market is up</string>
    <string name="market_percent">+1.70 %</string>
    <string name="confirm_currency_to_add">Do you want to add this currency to watchlist?</string>
    <string name="add_card">Add card</string>
    <string name="done">Done</string>
    <string name="success">Success</string>
    <string name="card_provider">Card Provider:</string>
    <string name="bank_name">Bank Name:</string>
    <string name="jusan_bank">Jusan Bank</string>
    <string name="card_details">Card Details:</string>
    <string name="example_card_number">1234 1234 1234 1234</string>
    <string name="current_balance">Current Balance ($):</string>
    <string name="example_current_balance">5000.00</string>
    <string name="enter_card_details">Enter Card Details:</string>
    <string name="select_a_card">Select a card</string>
    <string name="add_new_template">Add new template:</string>
    <string name="type">Type:</string>
    <string name="template_name">Template Name:</string>
    <string name="enter_name">Enter name</string>
    <string name="transfer_amount">Transfer Amount ($):</string>
    <string name="add_template">Add template</string>

    <string-array name="card_providers">
        <item>Visa</item>
        <item>MasterCard</item>
    </string-array>

    <string-array name="template_types">
        <item>Person</item>
        <item>Phone</item>
        <item>Internet</item>
        <item>House Rent</item>
    </string-array>

</resources>