<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.tabs.main.AddCreditCardBottomSheet">

    <TextView
        android:id="@+id/tvEnterCardDetailsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        android:text="@string/enter_card_details"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCardProviderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        android:text="@string/card_provider"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvBankNameText"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/tvEnterCardDetailsText" />

    <Spinner
        android:id="@+id/spCardProvider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:entries="@array/card_providers"
        android:paddingVertical="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCardProviderText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/tvCardProviderText" />

    <TextView
        android:id="@+id/tvBankNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_display_regular"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        android:text="@string/bank_name"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvCardDetailsText"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/tvCardProviderText" />

    <EditText
        android:id="@+id/etBankName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:hint="@string/jusan_bank"
        app:layout_constraintBottom_toBottomOf="@+id/tvBankNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/tvBankNameText" />

    <TextView
        android:id="@+id/tvCardDetailsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_display_regular"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        android:text="@string/card_details"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvCurrentBalanceText"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvBankNameText" />

    <EditText
        android:id="@+id/etCardDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:hint="@string/example_card_number"
        app:layout_constraintBottom_toBottomOf="@+id/tvCardDetailsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/tvCardDetailsText" />


    <TextView
        android:id="@+id/tvCurrentBalanceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_display_regular"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        android:text="@string/current_balance"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvCardDetailsText" />

    <EditText
        android:id="@+id/etCurrentBalance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:hint="@string/example_current_balance"
        app:layout_constraintBottom_toBottomOf="@+id/tvCurrentBalanceText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/tvCurrentBalanceText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddCard"
        style="@style/violet_button"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="32dp"
        android:text="@string/add_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentBalanceText" />

</androidx.constraintlayout.widget.ConstraintLayout>