<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/ivCryptoCurrencyLogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/img_xrp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCryptoCurrencyTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/watchList_title"
        android:textAppearance="@style/dollar_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivCryptoCurrencyLogo"
        app:layout_constraintTop_toTopOf="@id/ivCryptoCurrencyLogo" />

    <TextView
        android:id="@+id/tvCryptoCurrencySubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watchList_subtitle"
        app:layout_constraintStart_toStartOf="@id/tvCryptoCurrencyTitle"
        app:layout_constraintTop_toBottomOf="@id/tvCryptoCurrencyTitle" />

    <TextView
        android:id="@+id/tvCryptoCurrencyDollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/watchlist_dollar"
        android:textAppearance="@style/dollar_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvCryptoCurrencyTitle" />

    <TextView
        android:id="@+id/tvCryptoCurrencyDollarPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/watchlist_dollar_percent"
        android:textAppearance="@style/watchlist_dollar_percent_tv"
        app:layout_constraintBottom_toBottomOf="@id/tvCryptoCurrencySubtitle"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:alpha="0.1"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/tvCryptoCurrencyDollar"
        app:layout_constraintStart_toStartOf="@+id/ivCryptoCurrencyLogo"
        app:layout_constraintTop_toBottomOf="@id/ivCryptoCurrencyLogo" />

</androidx.constraintlayout.widget.ConstraintLayout>