<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.tabs.account.viewpagertabs.stats.StatsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvIncomes"
        android:layout_width="167dp"
        android:layout_height="72dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:elevation="2dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@+id/cvExpenses"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="14dp"
            android:layout_marginTop="11dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvIncomes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="0sp"
                android:text="@string/incomes"
                android:textAppearance="@style/incomes_tv" />

            <TextView
                android:id="@+id/tvIncomesAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="0sp"
                android:text="@string/income_amount"
                android:textAppearance="@style/incomes_amount_tv" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvExpenses"
        android:layout_width="167dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:elevation="2dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cvIncomes"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="14dp"
            android:layout_marginTop="11dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvExpenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="0sp"
                android:text="@string/expenses"
                android:textAppearance="@style/incomes_tv" />

            <TextView
                android:id="@+id/tvExpensesAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="0sp"
                android:text="@string/expenses_amount"
                android:textAppearance="@style/incomes_amount_tv" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="36dp"
        android:lineSpacingExtra="0sp"
        android:text="@string/october"
        android:textAppearance="@style/incomes_amount_tv"
        app:layout_constraintEnd_toStartOf="@id/ivArrowInStats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvIncomes" />

    <ImageView
        android:id="@+id/ivArrowInStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/img_arrow"
        app:layout_constraintBottom_toBottomOf="@id/tvDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvDate"
        app:layout_constraintTop_toTopOf="@id/tvDate" />

    <com.anychart.AnyChartView
        android:id="@+id/chart_view"
        android:layout_width="375dp"
        android:layout_height="264dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDate" />

    <TextView
        android:id="@+id/tvSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:lineSpacingExtra="0sp"
        android:text="@string/summary"
        android:textAppearance="@style/incomes_amount_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chart_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStats"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSummary" />

</androidx.constraintlayout.widget.ConstraintLayout>